fix stat item overlapping

--- a/ui/css/stats.css
+++ b/ui/css/stats.css
@@ -23,7 +23,7 @@
 	color:rgba(245, 245, 245, 0.960784313725);
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 1.3rem;
-	width: 35%;
+	flex: 1;
 }
 
 .stats-container .item .bar-container {
@@ -35,6 +35,7 @@
 	justify-content: space-evenly;
 	gap: 1%;
 	flex-grow: 1;
+	flex: 1;
 }
 
 .stats-container .item .bar-container .bar {
